style.css
*,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-size: 62.5%;
}
body {
  width: 100%;
  font-family: "Rubic", sans-serif;
  overflow-x: hidden;
}

/*header section*/
.hero {
  width: 100%;
}
.container {
  width: 100vw;
}
header {
  width: 100vw;
  height: 90vh;
  background-image: linear-gradient(
      135deg,
      rgba(0, 0, 0, 0.2),
      rgba(0, 0, 0, 0.2)
    ),
    url("./Assets/hero.jpeg");
  background-size: cover;
  background-position: -80px 0px;
}
.nav {
  display: flex;
  justify-content: space-between;
  width: 100%;
  padding: 4rem;
}
.nav-logo {
  background-image: url(./Assets/hulu-logo.svg);
  height: 2.4rem;
  width: 6.1rem;
  margin: -1.2rem -0.5rem;
  background-repeat: no-repeat;
  background-size: contain;
}
.nav-login {
  text-decoration: none;
  text-transform: uppercase;
  font-size: 1.4rem;
  font-weight: 600;
  letter-spacing: 0.06rem;
  color: #a8afbd;
  /* margin-right: 1.7rem; */
  transition: 0.3s;
  padding: 1rem 2rem;
  margin-top: -1.9rem;
  margin-right: 1rem;
  border-radius: 6px;
}
.nav-login:hover {
  background-color: rgba(113, 113, 113, 0.426);
}
.nav-cards {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 12rem;
  text-align: center;
  padding: 0.5rem 3rem;
}
.card {
  width: 40rem;
}
.nav-card_title {
  font-size: 1.2rem;
  text-transform: uppercase;
  color: #00ed82;
  margin-bottom: 2rem;
}
.nav-card_price {
  font-size: 2.3rem;
  font-weight: 600;
  line-height: 1.24;
  color: #fff;
  margin-top: 1rem;
}
.nav-card_CTA {
  text-decoration: none;
  padding: 1rem 9rem;
  color: #040405;
  background-color: #00ed82;
  text-transform: uppercase;
  display: inline-block;
  margin-top: 2rem;
  border-radius: 4px;
  font-weight: 600;
  font-size: 1.4rem;
  transition: 0.3s;
}
.nav-card_CTA:hover {
  opacity: 0.8;
}
.CTA1 {
  margin-left: 2.5rem;
}
.CTA2 {
  margin-top: 3.5rem;
  margin-right: 2.5rem;
}
.nav-card_img {
  object-fit: contain;
  width: 100%;
  height: 100%;
}
.nav-card_imgdiv {
  width: 60%;
  align-items: center;
  margin: 0 auto;
}

.hero-bottom_links {
  width: 100%;
}
.terms,
.signup {
  display: block;
  text-align: center;
  margin: 1.4rem auto;
  color: #fff;
}

.terms {
  font-size: 1.5rem;
}

.signup {
  font-size: 2rem;
}
.signup:hover {
  color: #a8afbd;
}
.header-continue {
  width: 100%;
  height: 15rem;
  background: linear-gradient(180deg, #29a869 0.66%, #16181d 99.34%);
  text-align: center;
}
.header-continue h1 {
  font-size: 1.8rem;
  margin-bottom: 2.6rem;
  color: #fff;
  font-weight: 700;
  padding-top: 2.6rem;
  letter-spacing: 0.5px;
  text-transform: uppercase;
}
.header-continue a {
  text-decoration: none;
  display: inline-block;
  padding: 1rem 8rem;
  border: 2px solid #fff;
  font-size: 1.5rem;
  color: #fff;
  font-weight: 700;
  transition: 0.3s;
  text-transform: uppercase;
  border-radius: 3px;
}
.header-continue a:hover {
  background-color: #ccc;
  border: 2px solid #ccc;
  color: #000;
}

/*main section*/
main {
  width: 100%;
  background-color: #0b0c0f;
  color: #fff;
  text-align: center;
}
.main-footer {
  margin-top: 5rem;
}
.main-title_subheading {
  color: #00ed82;
  font-size: 1.2rem;
  text-transform: uppercase;
  font-weight: 700;
  margin-bottom: 2rem;
  padding-top: 7rem;
}
.main-title_heading {
  font-size: 4rem;
  margin-bottom: 2.5rem;
}
.main-title_explanation {
  font-size: 2rem;
  padding-bottom: 2.5rem;
  width: 55%;
  margin: 0 auto;
}
.main-cards {
  display: flex;
  gap: 3.6rem;
  position: relative;
  justify-content: center;
}
.main-card {
  height: 44.5rem;
  width: 30rem;
  background-size: cover;
  background-repeat: no-repeat;
  border-radius: 10px;
  text-align: left;
  font-size: 1.5rem;
  font-weight: 700;
}
.c1 {
  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
    url("./Assets/fguy.png");
}
.c1:hover {
  border: 4px solid #a8afbd;
  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.7)),
    url("./Assets/fguy.png");
}
.c2 {
  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
    url("./Assets/prey.jpeg");
}
.c2:hover {
  border: 4px solid #a8afbd;
  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.7)),
    url("./Assets/prey.jpeg");
}
.c3 {
  background-image: url(./Assets/M-Building.png);
  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
    url("./Assets/M-Building.png");
}
.c3:hover {
  border: 4px solid #a8afbd;
  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.7)),
    url("./Assets/M-Building.png");
}
.c4 {
  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
    url("./Assets/sopranos.png");
}
.c4:hover {
  border: 4px solid #a8afbd;
  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.7)),
    url("./Assets/sopranos.png");
}
.note {
  font-size: 1rem;
  position: absolute;
  bottom: -3rem;
  right: 14.5rem;
  color: #a8afbd;
  opacity: 0.9;
}
.main-cards a {
  text-decoration: none;
  color: #fff;
  display: block;
}
.main-card p {
  font-weight: 600;
  font-size: 2rem;
  padding-bottom: 1rem;
  padding-top: 1.5rem;
  padding-left: 1.8rem;
  padding-right: 1rem;
}
.main-card h3 {
  font-weight: 600;
  font-size: 2rem;
  padding-left: 1.8rem;
  padding-right: 1rem;
}

.main-footer_link {
  font-size: 1.35rem;
  font-weight: 700;
  padding: 1.5rem 2.5rem;
  background-color: #00ed82;
  color: #000;
  text-decoration: none;
  border-radius: 7px;
  text-transform: uppercase;
  display: inline-block;
  transition: 0.3s;
}
.main-footer_link:hover {
  opacity: 0.8;
  background-color: #05d175;
}
.main-footer_pricing {
  font-size: 1rem;
  padding-top: 2rem;
  color: #a8afbd;
  width: 54%;
  margin: 0 auto;
}
.main-footer_pricinglink,
.sports-termslink {
  color: #a8afbd;
}
/* ... */

